--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "ram123",
+    "password": "vineeth123",
     "database": "wd-todo-dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "ram123",
+    "password": "vineeth123",
     "database": "wd-todo-test",
     "host": "127.0.0.1",
     "dialect": "postgres"
